--- a/index.html
+++ b/index.html
@@ -1,1 +1,91 @@
-https://github.com/NajahaBowens7/Najaha-portfolio.
+Najaha Bowens - Cybersecurity & IT Professional
+
+📍 Location: Jackson, Tennessee📧 Email: Najaha_bowens@yahoo.com🔗 LinkedIn: www.linkedin.com/in/najaha-bowens🌐 Portfolio URL: [To be added]
+
+About Me
+
+I am a dedicated Cybersecurity Analyst, IT Support Engineer, and System Administrator with hands-on experience in threat analysis, security incident response, system administration, and IT support. Passionate about securing digital environments, I specialize in malware detection, phishing prevention, and SIEM tools. I thrive in fast-paced environments, providing technical solutions and ensuring robust cybersecurity protocols are in place.
+
+Technical Skills
+
+Incident Response: SIEM (Splunk), IDS/IPS, Endpoint Detection (CrowdStrike, Microsoft Defender, FireEye), Forensic Tools (Wireshark)
+
+Security Tools: Proofpoint (TAP, Security Awareness Training), Mimecast, IAM (Identity and Access Management), ServiceNow, Zendesk, KnowBe4, Zscaler, Data Loss Prevention (DLP)
+
+Networking & Security Protocols: TCP/IP, DNS, HTTP/HTTPS, SolarWinds
+
+Threat Intelligence & Compliance: MITRE ATT&CK, Cyber Kill Chain, OSINT Tools, CIS, PCI DSS, NIST
+
+Programming & Scripting: PowerShell, Python, SQL
+
+Cloud Security: Azure, AWS
+
+Certifications
+
+ITIL 4 Foundations
+
+CompTIA A+ CE
+
+CompTIA Security+ CE (In Progress)
+
+Projects & Achievements
+
+Mastercard Cybersecurity Virtual Experience Program
+
+Project: Phishing Awareness Training
+
+Description: Developed a phishing awareness training program as part of Mastercard’s virtual cybersecurity experience. The project focused on educating employees on recognizing phishing attacks, securing credentials, and preventing data breaches.
+
+Key Highlights:
+
+Created security awareness slides detailing common phishing techniques and mitigation strategies.
+
+Outlined a proactive strategy to handle phishing attempts using secondary verification channels.
+
+Reinforced cybersecurity best practices to reduce social engineering risks.📂 Project File: Download Here (Attach actual portfolio file when hosted)
+
+SIEM Lab & Security Analysis
+
+Developed PowerShell scripts to extract metadata from Windows Event Viewer and integrate with third-party APIs for geolocation analysis.
+
+Configured Azure Sentinel to visualize global attack patterns, improving threat intelligence capabilities.
+
+Professional Experience
+
+Technical Support Representative (Remote)
+
+Concentrix | Newark, CA | Jan 2024 – Sep 2024
+
+Provided Tier 1 support for Linux and Windows systems, troubleshooting software, hardware, and connectivity issues.
+
+Conducted WebEx sessions for real-time problem-solving and technical guidance.
+
+Created and maintained knowledge base documentation, improving efficiency across support teams.
+
+Field Service Technician (Internship)
+
+City of Jackson | Jackson, TN | Sep 2022 – Oct 2023
+
+Configured and supported Linux servers and network infrastructure to maintain optimal system functionality.
+
+Utilized Splunk and SolarWinds to monitor and analyze system performance, reducing downtime.
+
+Managed and troubleshot email systems (SMTP, Exchange), performing upgrades and resolving configuration issues.
+
+Bridge Crew Member
+
+United States Army | Fort Leonard Wood, MO | Mar 2015 – May 2018
+
+Operated and maintained mission-critical technical equipment under high-pressure conditions.
+
+Applied technical problem-solving skills to resolve operational challenges efficiently.
+
+Education
+
+Jackson State Community College — Associate of Science in Computer Science (Aug 2020 - May 2023)
+
+ACI Learning — Cybersecurity Training Program (May 2023 – July 2023)
+
+Get in Touch
+
+If you're looking for a dedicated cybersecurity professional or IT support expert, feel free to reach out!📧 Email: Najaha_bowens@yahoo.com🔗 LinkedIn: www.linkedin.com/in/najaha-bowens
